Add API-elems list to utility sidebar

--- a/frontend/TensorChalk/src/pages/index.html
+++ b/frontend/TensorChalk/src/pages/index.html
@@ -4,7 +4,7 @@ metaTitle: "Utility | "
 
 <div class="row">
     <div class="columns large-3 medium-4" id="sidebar-container">
-        {{> sidebar}}
+        {{> api-elems}}
     </div>
     <div class="columns large-9 medium-8">
         {{> content}}
