--- a/frontend/TensorChalk/src/pages/index.html
+++ b/frontend/TensorChalk/src/pages/index.html
@@ -2,7 +2,7 @@
 metaTitle: "Utility | "
 ---
 
-<div class="row">
+<div class="row" id="index-body-div">
     <div class="columns large-3 medium-4" id="sidebar-container">
         {{> api-elems}}
     </div>
